--- a/src/app/pages/pedido/pedido.page.html
+++ b/src/app/pages/pedido/pedido.page.html
@@ -28,7 +28,7 @@
                 <ion-col>
                     <ion-row>
                         <ion-col>
-                            <div text-lowercase>
+                            <div>
                                 <ion-text color="primary" slot="start" tappable routerLink="/prod-detail.ped/{{itemp.item.cod_ref}}">
                                     {{itemp.item.cod_ref}} {{itemp.item.nombre}}
                                 </ion-text>
@@ -38,7 +38,7 @@
                     <ion-row>
                         <ion-col size="7" class="justify-content-start">
                             <div>
-                                <ion-input slot="start" (ionChange)="total(itemp,i)" [(ngModel)]="itemp.item.cantidad" type="number" min="1" max="1000" step="1" placeholder="Cantidad" clearOnEdit="true">
+                                <ion-input slot="start" (ionChange)="total(itemp,i,$event)" [(ngModel)]="itemp.item.cantidad" type="number" min="1" max="999999" step="1" placeholder="Cantidad" clearOnEdit="false">
                                 </ion-input>
                             </div>
                         </ion-col>
