--- a/src/app/pages/prod-detail.ped/prod-detail.ped.page.html
+++ b/src/app/pages/prod-detail.ped/prod-detail.ped.page.html
@@ -51,17 +51,17 @@
             <ion-grid>
                 <ion-row>
                     <ion-col size="3">
-                        <ion-button shape="round" color="success" (click)="addpedido(prodshop, cantidad_sol)">
+                        <ion-button *ngIf="this.cantidad_sol >0" shape="round" color="success" (click)="addpedido(prodshop, cantidad_sol)">
                             Agregar
                         </ion-button>
                     </ion-col>
                     <ion-col size="3">
-                        <ion-button class="counter-position" shape="round" (click)="decrentar_cantidad()" color="danger" fill="solid" size="small">
+                        <ion-button class="counter-position" shape="round" (click)="decrementar_cantidad()" color="danger" fill="solid" size="small">
                             <ion-icon name="remove"></ion-icon>
                         </ion-button>
                     </ion-col>
                     <ion-col size="3">
-                        <ion-input class="counter-position" (ionChange)="total()" [(ngModel)]="cantidad_sol" type="number" min="1" max="1000" step="1" placeholder="Cantidad" clearOnEdit="true">
+                        <ion-input class="counter-position" (ionChange)="changecantsol($event)" [(ngModel)]="cantidad_sol" type="number" min="1" max="999999" step="1" placeholder="Cantidad" clearOnEdit="false">
                         </ion-input>
                     </ion-col>
                     <ion-col size="3">
