--- a/src/app/pages/prod-detail/prod-detail.page.html
+++ b/src/app/pages/prod-detail/prod-detail.page.html
@@ -42,28 +42,28 @@
         </ion-item>
         <ion-item class="bg-white">
             <ion-text color="success">
-                {{ prodshop.precio_ven | currency:'COP':'symbol-narrow' }}
+                {{ prodshop.precio_ven | currency }}
             </ion-text>
             <ion-text color="success" slot="end">
-                Total: {{ total_t | currency:'COP':'symbol-narrow' }}
+                Total: {{ total_t | currency }}
             </ion-text>
         </ion-item>
         <div class="bg-white">
             <ion-grid>
                 <ion-row>
                     <ion-col size="3">
-                        <ion-button shape="round" color="success" (click)="addfactura(prodshop, cantidad_sol)">
+                        <ion-button *ngIf="this.cantidad_sol >0 && (this.cantidad_sol <= this.prodshop.existencia)" shape="round" color="success" (click)="addfactura(prodshop, cantidad_sol)">
                             Agregar
                         </ion-button>
                     </ion-col>
                     <ion-col size="3">
-                        <ion-button class="counter-position" shape="round" color="danger" fill="solid" size="small">
+                        <ion-button class="counter-position" shape="round" (click)="decrementar_cantidad()" color="danger" fill="solid" size="small">
                             <ion-icon name="remove"></ion-icon>
                         </ion-button>
                     </ion-col>
                     <ion-col size="3">
                         <div>
-                            <ion-input class="counter-position" slot="start" (ionChange)="total()" [(ngModel)]="cantidad_sol" type="number" min="1" max="1000" step="1" placeholder="Cantidad" clearOnEdit="true">
+                            <ion-input class="counter-position" slot="start" (ionChange)="changecantsol($event)" [(ngModel)]="cantidad_sol" [value]="cantidad_sol" type="number" step="1" required="true" placeholder="Cantidad" clearOnEdit="false">
                             </ion-input>
                         </div>
                     </ion-col>
