--- a/src/app/pages/visita-detail/visita-detail.page.scss
+++ b/src/app/pages/visita-detail/visita-detail.page.scss
@@ -2,6 +2,20 @@
     ion-content {
         --background: linear-gradient(-135deg, var(--ion-color-medium), var(--ion-color-light))
     }
+    --padding-top: 0;
+    --padding-end: 1px;
+    --padding-bottom: 0;
+    --padding-start: 1px;
+    --transition: color 0.15s linear 0s,
+    opacity 0.15s linear 0s;
+    min-width: 90px;
+    max-width: 360px;
+    min-height: 48px;
+    font-size: 10px;
+    font-weight: 500;
+    letter-spacing: .02em;
+    line-height: 20px;
+    text-transform: uppercase;
 }
 
 .spinner-container {
@@ -101,7 +115,8 @@ ion-card.facturaCard {
         width: 100%;
         z-index: 3;
         bottom: 0;
-        padding: 5px;
+        padding: 2px;
+        margin: 3px;
     }
     .shadow {
         position: absolute;
@@ -404,42 +419,42 @@ button-native {
 }
 
 .detalles-padding {
-    padding-left: var(--ion-padding, 16px);
-    padding-right: var(--ion-padding, 16px);
-    padding-top: var(--ion-padding, 16px);
-    padding-bottom: var(--ion-padding, 16px);
+    padding-left: var(--ion-padding, 2px);
+    padding-right: var(--ion-padding, 3px);
+    padding-top: var(--ion-padding, 1px);
+    padding-bottom: var(--ion-padding, 4px);
     background: linear-gradient(-135deg, #e3e3e5, var(--ion-color-light));
 }
 
 .actividades-padding {
-    padding-left: var(--ion-padding, 16px);
-    padding-right: var(--ion-padding, 16px);
-    padding-top: var(--ion-padding, 16px);
-    padding-bottom: var(--ion-padding, 16px);
+    padding-left: var(--ion-padding, 2px);
+    padding-right: var(--ion-padding, 2px);
+    padding-top: var(--ion-padding, 1px);
+    padding-bottom: var(--ion-padding, 2px);
     background: linear-gradient(-135deg, #d5ecef, var(--ion-color-light));
 }
 
 .cartera-padding {
-    padding-left: var(--ion-padding, 16px);
-    padding-right: var(--ion-padding, 16px);
-    padding-top: var(--ion-padding, 16px);
-    padding-bottom: var(--ion-padding, 16px);
+    padding-left: var(--ion-padding, 2px);
+    padding-right: var(--ion-padding, 2px);
+    padding-top: var(--ion-padding, 1px);
+    padding-bottom: var(--ion-padding, 2px);
     background: linear-gradient(-135deg, #c5d9fa, var(--ion-color-light));
 }
 
 .facturar-padding {
-    padding-left: var(--ion-padding, 16px);
-    padding-right: var(--ion-padding, 16px);
-    padding-top: var(--ion-padding, 16px);
-    padding-bottom: var(--ion-padding, 16px);
+    padding-left: var(--ion-padding, 2px);
+    padding-right: var(--ion-padding, 2px);
+    padding-top: var(--ion-padding, 1px);
+    padding-bottom: var(--ion-padding, 2px);
     background: linear-gradient(-135deg, #c9d8f3, var(--ion-color-light));
 }
 
 .pedido-padding {
-    padding-left: var(--ion-padding, 16px);
-    padding-right: var(--ion-padding, 16px);
-    padding-top: var(--ion-padding, 16px);
-    padding-bottom: var(--ion-padding, 16px);
+    padding-left: var(--ion-padding, 2px);
+    padding-right: var(--ion-padding, 2px);
+    padding-top: var(--ion-padding, 1px);
+    padding-bottom: var(--ion-padding, 2px);
     background: linear-gradient(-135deg, #e2decb, var(--ion-color-light));
 }
 
@@ -489,4 +504,17 @@ button-native {
 .saldo-cartera {
     position: relative;
     left: 20px;
+}
+
+.toolbaropciones {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    height: 35px;
+    // background-color: #c5d9fa;
+}
+
+.cliente-avatar {
+    width: 98px;
+    height: 98px;
+    margin-left: -10px;
 }
