--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -11,11 +11,11 @@
     min-width: 90px;
     max-width: 360px;
     min-height: 48px;
-    font-size: 10px;
+    // font-size: 10px;
     font-weight: 500;
     letter-spacing: .02em;
-    line-height: 20px;
-    text-transform: uppercase;
+    // line-height: 20px;
+    // text-transform: uppercase;
 }
 
 ion-content {
